# Nauja-Repozicija

./: CMakeLists.txt  Mylib.h  README.md  Stud.cpp  Stud.h  main.cpp  test_main.cpp  v0.2.cbp  v0.2.depend  v0.2.layout  v1.1.cbp  v1.1.depend  v1.1.layout  v1.2.cbp  v1.2.depend  v1.2.layout  v1.5.cbp  v1.5.depend  v1.5.layout
docs/: _mylib_8h_source.html  _stud_8h_source.html  annotated.html  class_bar_environment-members.html  class_bar_environment.html  class_base-members.html  class_base.html  class_biggest_int_convertible-members.html  class_biggest_int_convertible.html  class_child_class_with_stream_operator.html  class_child_class_without_stream_operator.html  class_comment_test.html  class_common_test-members.html  class_common_test.html  class_construct_from_t-members.html  class_construct_from_t.html  class_container_test-members.html  class_container_test.html  class_conversion_helper_base.html  class_conversion_helper_derived.html  class_counter-members.html  class_counter.html  class_custom_function_naming_test.html  class_custom_functor_naming_test.html  class_custom_integer_naming_test.html  class_custom_lambda_naming_test.html  class_custom_struct_naming_test.html  class_derived_test-members.html  class_derived_test.html  class_detect_not_instantiated_test-members.html  class_detect_not_instantiated_test.html  class_detect_not_instantiated_types_test-members.html  class_detect_not_instantiated_types_test.html  class_disabled_test.html  class_dog_adder-members.html  class_dog_adder.html  class_dynamic_fixture-members.html  class_dynamic_fixture.html  (+1071 more)
(+29 files in other folders)
